--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,8 +45,8 @@ import { SITE_TITLE } from "../consts";
     header {
         margin: 0;
         padding: 0;
-        background: white;
-        box-shadow: 0 2px 8px rgba(var(--black), 5%);
+        background: var(--gray-light);
+        box-shadow: 0 2px 4px rgba(var(--black), 0.2);
     }
     h2 {
         margin: 0;
