Fix: Email link use the browser

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,13 +56,14 @@ const founder_links = [
         <p>
             ¿Tienes una idea en mente? ¡Nos encantaría ayudarte a hacerla realidad!
             <br />
-            <a href="mailto:juanberesiarte@gmail.com">Contáctanos</a> para más información o para comenzar un proyecto juntos.
+            <a href="https://mailto:juanberesiarte@gmail.com">Contáctanos</a> para más información o para comenzar un proyecto
+            juntos.
         </p>
     </main>
 </Layout>
 <style>
     h1 span {
-        border-bottom: 4px solid var(--accent);
+        border-bottom: 5px solid var(--accent);
     }
 
     h1 span a {
@@ -70,6 +71,7 @@ const founder_links = [
         text-decoration: none;
         color: var(--black);
         transition: transform 0.2s ease;
+        margin: 0 1.5px;
     }
 
     h1 span a:hover {
