--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,7 +6,7 @@
 body {
 	font-family: 'Atkinson', sans-serif;
 	margin: 0;
-	padding: 0;
+	padding: 0 2%;
 	text-align: left;
 	background: linear-gradient(var(--gray-gradient)) no-repeat;
 	background-size: 100% 600px;
@@ -33,6 +33,7 @@ h6 {
 	margin: 0 0 0.5rem 0;
 	color: rgb(var(--black));
 	line-height: 1.2;
+	text-wrap: wrap;
 }
 
 h1 {
