--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -60,13 +60,12 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
             color: rgb(var(--white)) !important;
         }
         .title {
-            margin-bottom: 1em;
-            padding: 1em 0;
+            margin-top: 1em;
             text-align: center;
             line-height: 1;
         }
         .title h1 {
-            margin: 0 0 0.5em 0;
+            margin: 0;
         }
         .date {
             margin-bottom: 0.5em;
@@ -79,12 +78,37 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
             font-style: italic;
         }
 
+        h1,
         h2,
         h3,
         h4,
         h5,
         h6 {
             margin: 2rem 0 !important;
+            text-wrap: balance;
+            word-wrap: normal;
+            overflow-wrap: break-word;
+        }
+
+        @media (max-width: 800px) {
+            h1 {
+                font-size: 2.5rem;
+            }
+            h2 {
+                font-size: 2.2rem;
+            }
+            h3 {
+                font-size: 1.8rem;
+            }
+            h4 {
+                font-size: 1.5rem;
+            }
+            h5 {
+                font-size: 1.2rem;
+            }
+            h6 {
+                font-size: 1.1rem;
+            }
         }
     </style>
 </Layout>
