--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const founder_links = [
 ];
 ---
 
-<Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
+<Layout title="CROBF - Equipo de desarrollo" description={SITE_DESCRIPTION}>
     <main>
         <h1>
             Bienvenidos a
