--- a/src/components/ThemeIcon.astro
+++ b/src/components/ThemeIcon.astro
@@ -1,4 +1,4 @@
-<button id="themeToggle">
+<button id="themeToggle" name="Botón cambiar tema (Claro-Oscuro)">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="icon">
         <path
             class="sun"
