--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -3,8 +3,10 @@ import type { CollectionEntry } from "astro:content";
 import FormattedDate from "../components/FormattedDate.astro";
 import Layout from "./Layout.astro";
 
-type Props = CollectionEntry<"blog">["data"];
-
+type Props = Omit<CollectionEntry<"blog">["data"], "pubDate" | "updatedDate"> & {
+    pubDate?: Date;
+    updatedDate?: Date;
+};
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
@@ -17,7 +19,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
             <div class="prose">
                 <div class="title">
                     <div class="date">
-                        <FormattedDate date={pubDate} />
+                        {pubDate && <FormattedDate date={pubDate} />}
                         {
                             updatedDate && (
                                 <div class="last-updated-on">
