add cards from founder in abour

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,10 +20,10 @@ import { SITE_TITLE } from "../consts";
             </svg>
         </div>
         <div class="internal-links">
-            <HeaderLink href="/">Home</HeaderLink>
+            <HeaderLink href="/">Inicio</HeaderLink>
             <HeaderLink href="/blog">Blog</HeaderLink>
-            <HeaderLink href="/docs">Docs</HeaderLink>
-            <HeaderLink href="/about">About</HeaderLink>
+            <HeaderLink href="/docs">Documentación</HeaderLink>
+            <HeaderLink href="/about">Sobre Nosotros</HeaderLink>
         </div>
     </nav>
 </header>
