--- a/src/pages/founders/[...slug].astro
+++ b/src/pages/founders/[...slug].astro
@@ -4,7 +4,7 @@ import FounderLayout from "../../layouts/FounderLayout.astro";
 
 export async function getStaticPaths() {
     const founders = await getCollection("founder");
-    return founders.map((founder) => ({
+    return founders.map((founder: CollectionEntry<"founder">["data"]) => ({
         params: { slug: founder.slug },
         props: founder,
     }));
