--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/BlogPost.astro";
 import CardFounder from "../components/CardFounder.astro";
-import { SITE_TITLE } from "../consts";
+import { SITE_TITLE, TEAM_MEMBERS } from "../consts";
 ---
 
 <Layout
@@ -18,11 +18,41 @@ import { SITE_TITLE } from "../consts";
             <h2>¿Quiénes Somos?</h2>
             <p>CROBF está formado por cinco profesionales apasionados por la tecnología y el desarrollo de software:</p>
             <div class="cards">
-                <CardFounder name="Beresiarte Juan" image="/founders/juan_beresiarte.jpeg" />
-                <CardFounder name="Casiano Ezequiel" />
-                <CardFounder name="Ferreira Lautaro" />
-                <CardFounder name="Osorio Valentina" />
-                <CardFounder name="Rodriguez Magali" />
+                <CardFounder
+                    name={TEAM_MEMBERS.Juan.fullName}
+                    image={TEAM_MEMBERS.Juan.logo}
+                    github={TEAM_MEMBERS.Juan.gitHub}
+                    linkedin={TEAM_MEMBERS.Juan.linkedin}
+                    link={TEAM_MEMBERS.Juan.link}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Ezequiel.fullName}
+                    image={TEAM_MEMBERS.Ezequiel.logo}
+                    github={TEAM_MEMBERS.Ezequiel.gitHub}
+                    linkedin={TEAM_MEMBERS.Ezequiel.linkedin}
+                    link={TEAM_MEMBERS.Ezequiel.link}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Lautaro.fullName}
+                    image={TEAM_MEMBERS.Lautaro.logo}
+                    github={TEAM_MEMBERS.Lautaro.gitHub}
+                    linkedin={TEAM_MEMBERS.Lautaro.linkedin}
+                    link={TEAM_MEMBERS.Lautaro.link}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Valentina.fullName}
+                    image={TEAM_MEMBERS.Valentina.logo}
+                    github={TEAM_MEMBERS.Valentina.gitHub}
+                    linkedin={TEAM_MEMBERS.Valentina.linkedin}
+                    link={TEAM_MEMBERS.Valentina.link}
+                />
+                <CardFounder
+                    name={TEAM_MEMBERS.Magali.fullName}
+                    image={TEAM_MEMBERS.Magali.logo}
+                    github={TEAM_MEMBERS.Magali.gitHub}
+                    linkedin={TEAM_MEMBERS.Magali.linkedin}
+                    link={TEAM_MEMBERS.Magali.link}
+                />
             </div>
             <p>
                 Nos define nuestra diversidad de conocimientos, nuestras ganas de aprender y nuestro compromiso con el
