Add margin in Founder Cards

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,8 @@ import { SITE_TITLE, TEAM_MEMBERS } from "../consts";
 <Layout
     title={`Sobre Nosotros - ${SITE_TITLE}`}
     description="Somos CROBF, una empresa de desarrollo de software conformada por un equipo joven pero con experiencia en diversas tecnologías."
-    heroImage="/blog-placeholder-about.jpg">
+    heroImage="/blog-placeholder-about.jpg"
+>
     <section id="about-us">
         <div class="container">
             <p>
@@ -126,7 +127,7 @@ import { SITE_TITLE, TEAM_MEMBERS } from "../consts";
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 10px;
+            gap: 1rem;
         }
     </style>
 </Layout>
