create es folder

--- a/src/pages/es/about.astro
+++ b/src/pages/es/about.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/BlogPost.astro";
-import CardFounder from "../components/CardFounder.astro";
-import { SITE_TITLE, TEAM_MEMBERS } from "../consts";
+import Layout from "../../layouts/BlogPost.astro";
+import CardFounder from "../../components/CardFounder.astro";
+import { SITE_TITLE, TEAM_MEMBERS } from "../../consts";
 ---
 
 <Layout
