--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import { SITE_DESCRIPTION } from "../../consts";
+import Layout from "../layouts/Layout.astro";
+import { SITE_DESCRIPTION } from "../consts";
 
 const founder_links = [
     {
