--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -3,11 +3,15 @@ import type { HTMLAttributes } from "astro/types";
 
 type Props = HTMLAttributes<"a">;
 
-const { href, class: className, ...props } = Astro.props;
+const { href, class: className, ...props } = Astro.props as Props;
+const hrefString: string | undefined = typeof href === "string" ? href : undefined;
 
 const { pathname } = Astro.url;
-const subpath = pathname.match(/[^\/]+/g);
-const isActive = href === pathname || href === "/" + subpath?.[0];
+
+const [, ...urlPath] = pathname.match(/[^\/]+/g) || [];
+const [, ...hrefPath] = hrefString?.match(/[^\/]+/g) || [];
+
+const isActive = urlPath[0] === hrefPath[0];
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
