--- a/src/pages/[lang]/blog/[...slug].astro
+++ b/src/pages/[lang]/blog/[...slug].astro
@@ -4,10 +4,21 @@ import BlogPost from "../../../layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
     const posts = await getCollection("blog");
-    return posts.map((post) => ({
-        params: { slug: post.slug },
-        props: post,
-    }));
+
+    return posts.map((post) => {
+        const { slug } = post;
+        const match = slug.match(/[^\/]+/g);
+        if (!match || match.length < 2) {
+            throw new Error(`El slug "${slug}" no tiene el formato esperado.`);
+        }
+
+        const [lang = "en", ...real_slug] = match;
+
+        return {
+            params: { lang, slug: real_slug.join("/") },
+            props: post,
+        };
+    });
 }
 type Props = CollectionEntry<"blog">;
 
