--- a/src/pages/[lang]/docs/[...slug].astro
+++ b/src/pages/[lang]/docs/[...slug].astro
@@ -4,14 +4,16 @@ import BlogPost from "../../../layouts/BlogPost.astro";
 
 export async function getStaticPaths() {
     const documentation = await getCollection("documentation");
-    return documentation.map((docs) => ({
-        params: { slug: docs.slug },
-        props: docs,
-    }));
+    return documentation.map((doc) => {
+        const [lang = "en", ...realSlug] = doc.slug.split("/");
+        return {
+            params: { lang, slug: realSlug.join("/") },
+            props: doc,
+        };
+    });
 }
-type Props = CollectionEntry<"documentation">;
 
-const documentation = Astro.props;
+const documentation: CollectionEntry<"documentation"> = Astro.props;
 const { Content } = await documentation.render();
 ---
 
