--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,8 +19,7 @@ const t = useTranslations(lang);
                 stroke-width="1.5"
                 stroke="currentColor"
                 class="size-6"
-                id="menu-button"
-            >
+                id="menu-button">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                 ></path>
             </svg>
@@ -90,6 +89,9 @@ const t = useTranslations(lang);
     }
     nav .menu svg {
         display: none;
+    }
+    .internal-links {
+        display: flex;
     }
     @media screen and (max-width: 800px) {
         nav .menu svg {
