--- a/src/components/LanguageSelector.astro
+++ b/src/components/LanguageSelector.astro
@@ -20,12 +20,15 @@ const actual_lang = getLangFromUrl(Astro.url);
     </select>
 </div>
 
-<script is:inline>
-    const language_selector = document.querySelector("select#language-dropdown");
-    language_selector.addEventListener("change", (event) => {
-        const path = window.location.pathname.match(/[^\/]+/g) || [];
-        path[0] = event.target.value;
-        window.location.href = `/${path.join("/")}`;
+<script>
+    import Cookies from "js-cookie";
+
+    const language_dropdown = document.getElementById("language-dropdown")!;
+
+    language_dropdown.addEventListener("change", function (event) {
+        const lang = (event.target as HTMLSelectElement).value;
+        Cookies.set("prefered_language", lang, { expires: 7, path: "/" });
+        location.reload();
     });
 </script>
 
@@ -33,15 +36,20 @@ const actual_lang = getLangFromUrl(Astro.url);
     .language-dropdown-container {
         display: flex;
         align-items: center;
-        justify-content: center;
-        padding: 0.5rem 1rem;
+        justify-content: left;
+        padding: 0;
+        border-bottom: solid 4px transparent;
     }
 
-    .language-dropdown-icon {
-        margin-right: 8px;
-        width: 20px;
-        height: 20px;
-        color: currentColor;
+    @media screen and (max-width: 800px) {
+        .language-dropdown-container {
+            padding: 1em 0;
+        }
+
+        select {
+            border-left: none !important;
+            padding: 0 !important;
+        }
     }
 
     select {
@@ -51,6 +59,8 @@ const actual_lang = getLangFromUrl(Astro.url);
         border: none;
         cursor: pointer;
         color: var(--black);
+        border-left: #333 1px solid;
+        padding: 0.4em 0.6em;
     }
 
     nav .internal-links {
