Remove border for Theme Button

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -58,7 +58,7 @@ export function getStaticPaths() {
     @media (max-width: 800px) {
         h1 {
             font-size: 3rem;
-            text-wrap: wrap;
+            text-wrap: balance;
             text-align: center;
         }
     }
