--- a/src/pages/[lang]/docs/index.astro
+++ b/src/pages/[lang]/docs/index.astro
@@ -4,6 +4,8 @@ import { getCollection } from "astro:content";
 import FormattedDate from "../../../components/FormattedDate.astro";
 import Layout from "../../../layouts/Layout.astro";
 
+export const prerender = true;
+
 export async function getStaticPaths() {
     return [{ params: { lang: "es" } }, { params: { lang: "en" } }];
 }
