--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -38,7 +38,13 @@ const posts = (await getCollection("blog"))
                     posts.map((post) => (
                         <li>
                             <a href={`/${lang}/blog${post.slug.slice(2)}/`}>
-                                <img width={720} height={360} src={post.data.heroImage} alt="" />
+                                <img
+                                    width={720}
+                                    height={360}
+                                    src={post.data.heroImage}
+                                    alt=""
+                                    style="object-fit: cover; width: 100%; height: 100%;"
+                                />
                                 <h4 class="title">{post.data.title}</h4>
                                 <p class="date">
                                     <FormattedDate date={post.data.pubDate} />
@@ -85,6 +91,34 @@ const posts = (await getCollection("blog"))
             margin-bottom: 0.5rem;
             border-radius: 12px;
         }
+        ul li img {
+            margin-bottom: 0.5rem;
+            border-radius: 12px;
+            aspect-ratio: 2/1;
+            object-fit: cover;
+            width: 100%;
+        }
+        .hero-image {
+            width: 100%;
+            max-width: 1020px;
+            margin: 0 auto;
+            aspect-ratio: 2/1;
+        }
+
+        .hero-image img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 12px;
+            box-shadow: var(--box-shadow);
+        }
+
+        ul li:first-child img {
+            width: 100%;
+            max-height: 400px;
+        }
+
         ul li a {
             display: block;
         }
@@ -100,6 +134,21 @@ const posts = (await getCollection("blog"))
         ul li a:hover h4,
         ul li a:hover .date {
             color: rgb(var(--accent));
+            .hero-image {
+                width: 100%;
+                max-width: 1020px;
+                margin: 0 auto;
+                aspect-ratio: 2/1;
+            }
+
+            .hero-image img {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 12px;
+                box-shadow: var(--box-shadow);
+            }
         }
         ul a:hover img {
             box-shadow: var(--box-shadow);
