--- a/src/components/FormContact.astro
+++ b/src/components/FormContact.astro
@@ -6,24 +6,92 @@ const t = useTranslations(lang);
 
 <div class="contact-form">
     <span class="heading">{t("form.contact.title")}</span>
-    <form action="https://formspree.io/f/xnnqonwb" method="POST">
+    <form method="POST" id="contact_form">
+        <input type="hidden" name="access_key" value="e76c6c67-e1aa-4375-8e44-d3eabf0b2074" />
+
         <label for="name">{t("form.contact.name")}</label>
-        <input type="text" name="name" required="" />
+        <input type="text" name="name" placeholder="Jhon Doe" required="" />
+
         <label for="email">{t("form.contact.email")}</label>
-        <input type="email" id="email" name="email" required="" />
+        <input type="email" id="email" name="email" placeholder="jhondoe@email.com" required="" />
+
         <label for="message">{t("form.contact.message")}</label>
-        <textarea id="message" name="message" required=""></textarea>
+        <textarea id="message" name="message" placeholder="Lorem ipsum dolor sit amet..." required=""></textarea>
+
         <button type="submit">{t("form.contact.submit")}</button>
+
+        <div class="result"></div>
     </form>
 </div>
+<script is:inline>
+    const form = document.getElementById("contact_form");
+    const result = document.querySelector(".result");
+
+    form.addEventListener("submit", async function (e) {
+        const formData = new FormData(form);
+        e.preventDefault();
+
+        try {
+            const json = JSON.stringify(Object.fromEntries(formData));
+
+            result.classList.add("wait");
+            result.innerHTML = "Please wait...";
+
+            const response = await fetch("https://api.web3forms.com/submit", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    Accept: "application/json",
+                },
+                body: json,
+            });
+
+            const data = await response.json();
+
+            if (data.status === 400) throw new Error();
+
+            console.log(data);
+
+            result.classList.replace("wait", "success");
+            result.innerHTML = "Se envió el mensaje correctamente";
+        } catch (e) {
+            result.classList.replace("wait", "error");
+            result.innerHTML = "Hubo un error al enviar tu mensaje";
+        } finally {
+            form.reset();
+        }
+    });
+</script>
 <style>
+    .result {
+        display: none;
+        padding: 0.5rem 0;
+        border-radius: 15px;
+        text-align: center;
+        margin-top: 10px;
+    }
+    .result.wait {
+        display: inline-block !important;
+        border: solid 2px #bfdd17;
+        background-color: #bad4263b;
+    }
+    .result.success {
+        display: inline-block !important;
+        border: solid 2px #2f790c;
+        background-color: #5ac7283b;
+    }
+    .result.error {
+        display: inline-block !important;
+        border: solid 2px #920e0e;
+        background-color: #c526263b;
+    }
     .contact-form {
         background-color: #f2f2f2;
         padding: 1rem 1.5rem 2rem 1.5rem;
         border-radius: 10px;
     }
     html.dark .contact-form {
-        box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 0px 5px 5px rgba(94, 93, 93, 0.2);
         background-color: #444444;
     }
 
@@ -53,7 +121,7 @@ const t = useTranslations(lang);
     }
 
     .contact-form label {
-        margin-bottom: 10px;
+        margin-left: 5px;
     }
 
     textarea {
